k8s-related/domain-name-homework/domain-setup/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingressClassName: "nginx"
    cert-manager.io/cluster-issuer: lets-encrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - argocd.piseth.dev
      secretName: argocd-tls
  rules:
    - host: argocd.piseth.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
